--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,32 @@ body {
 .mapboxgl-ctrl-bottom-left {
   display: none;
 }
+.mapboxgl-popup-tip {
+  border-top-color: #181717 !important;
+}
+
+.eq-popup .mapboxgl-popup-content {
+  background: #181717 !important;
+  border-radius: 0.5rem;
+  color: white;
+  font-family: Quicksand;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.eq-popup .mapboxgl-popup-content h3 {
+  text-decoration: underline;
+}
+
+.eq-popup .mapboxgl-popup-content p span {
+  font-weight: 900;
+}
+
+.eq-popup .mapboxgl-popup-content .readmore {
+  font-weight: 900;
+  font-size: smaller;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 5px;
+}
